--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,16 @@ knitr::opts_chunk$set(
 This is an experimental R package to provide an interface to sudachi.rs, a Rust implementation of Sudachi.
 Under the hood, this package is powered by [extendr framework](https://extendr.github.io/) to bridge between R and Rust.
 
+### Licenses
 
-The Rust code here is based mainly on [this CLI tool](https://github.com/WorksApplications/sudachi.rs/blob/ad1f15818536a379c668ea48fcebaca2278df38e/sudachi-cli/src/main.rs) on
-the sudachi.rs repository, which is licensed under Apache-2.0 License.
+In addition to depend on sudachi.rs, the fledgingr package copies the several
+code from sudachi.rs' repository, which is licensed under the Apache-2.0 license.
+
+* The Rust code here is basically based on [the implementation of the CLI tool][1]
+* The files under `inst/sudachi_resources` are copied from [`resources` directory on the repository][2]
+
+[1]: https://github.com/WorksApplications/sudachi.rs/blob/ad1f15818536a379c668ea48fcebaca2278df38e/sudachi-cli/src/main.rs
+[2]: https://github.com/WorksApplications/sudachi.rs/tree/develop/resources
 
 ## Why fledgingr?
 
