--- a/README.Rmd
+++ b/README.Rmd
@@ -21,17 +21,6 @@ knitr::opts_chunk$set(
 This is an experimental R package to provide an interface to sudachi.rs, a Rust implementation of Sudachi.
 Under the hood, this package is powered by [extendr framework](https://extendr.github.io/) to bridge between R and Rust.
 
-### Licenses
-
-In addition to depend on sudachi.rs, the fledgingr package copies the several
-code from sudachi.rs' repository, which is licensed under the Apache-2.0 license.
-
-* The Rust code here is basically based on [the implementation of the CLI tool][1]
-* The files under `inst/sudachi_resources` are copied from [`resources` directory on the repository][2]
-
-[1]: https://github.com/WorksApplications/sudachi.rs/blob/ad1f15818536a379c668ea48fcebaca2278df38e/sudachi-cli/src/main.rs
-[2]: https://github.com/WorksApplications/sudachi.rs/tree/develop/resources
-
 ## Why fledgingr?
 
 fledging = 巣立ち (sudachi)
@@ -53,13 +42,13 @@ install.packages("fledgingr",
 )
 ```
 
-## Example
+## Usages
 
 ```{r}
 library(fledgingr)
 
 x <- c(
-  "今日もあなただけにニンジャの真実をお伝えしていきます",
+  "真実をお伝えしていきます",
   "高輪ゲートウェイ駅"
 )
 
@@ -74,3 +63,13 @@ tokenize("選挙管理委員会", mode = "B")$surface
 tokenize("選挙管理委員会", mode = "C")$surface
 ```
 
+## Licenses
+
+In addition to depend on sudachi.rs, the fledgingr package copies the several
+code from sudachi.rs' repository, which is licensed under the Apache-2.0 license.
+
+* The Rust code here is basically based on [the implementation of the CLI tool][1]
+* The files under `inst/sudachi_resources` are copied from [`resources` directory on the repository][2]
+
+[1]: https://github.com/WorksApplications/sudachi.rs/blob/ad1f15818536a379c668ea48fcebaca2278df38e/sudachi-cli/src/main.rs
+[2]: https://github.com/WorksApplications/sudachi.rs/tree/develop/resources
